# kmer_encoding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: basicEncoding.h  bloomfilter.h  partitionedBloomFilter.h  predeterminedBloomFilter.h  predeterminedEncoding.h
output_files/: collisions_round_0.txt  collisions_round_1.txt  collisions_round_2.txt
src/: CMakeLists.txt  basicEncoding.cpp  benchmark_main.cpp  bloomfilter.cpp  bloomfilter.h  hashMapTest.cpp  main.cpp  partitionedEncoding.cpp  predeterminedEncoding.cpp
tests/: CMakeLists.txt  bloomfilter_test.cpp
